--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <h2><span class="name">Sana Akhter</span></h2>
       <h3>And I'm a <span id="typing"></span></h3>
       <p>Explore my projects and experiences as a passionate developer, driven by innovation and problem-solving.</p>
-      <a href="http://127.0.0.1:5500/index.html" class="btn">Download CV</a>
+   <!--Projects Section-->
+      <a href="https://fabulous-gelato-92832d.netlify.app/" class="btn">Download CV</a>
     </div>
     <div class="hero-img">
       <img src="https://abdulmoizkportfolio.netlify.app/assets/images/objective%20image.gif" alt="">
     </div>
   </section>
 
-   <!--Projects Section-->
   <section id="projects" class="projects">
     <h2>My Projects</h2>
     <div class="project-grid">
@@ -134,6 +134,6 @@ It updates in real-time and works in both 12-hour and 24-hour formats.</p>
   <footer>
     <p>© 2025 Sanaakhter. All rights reserved.</p>
   </footer>
-  <script src="app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
