--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h3>And I'm a <span id="typing"></span></h3>
       <p>Explore my projects and experiences as a passionate developer, driven by innovation and problem-solving.</p>
    <!--Projects Section-->
-      <a href="https://fabulous-gelato-92832d.netlify.app/" class="btn">Download CV</a>
+      <a href="https://sanacoder26.github.io/Responsive-C.V/" class="btn">Download CV</a>
     </div>
     <div class="hero-img">
       <img src="https://abdulmoizkportfolio.netlify.app/assets/images/objective%20image.gif" alt="">
